--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework</title>
     <meta name="description" content="Перша вебсторінка" />
+    <meta property="og:title" content="Валя Белинська" />
+    <meta property="og:description" content="Мій перший сайт" />
     <meta
       property="og:image"
       content="https://valyabelinskaya.github.io/mi_photo.jpg"
