--- a/index.html
+++ b/index.html
@@ -1,67 +1,126 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework</title>
-    <meta name="description" content="Перша вебсторінка" />
-    <meta property="og:title" content="Валя Белинська" />
-    <meta property="og:description" content="Мій перший сайт" />
-    <meta
-      property="og:image"
-      content="https://valyabelinskaya.github.io/mi_photo.jpg"
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Привіт, мене звати Валя і я дезігнер</h1>
-    <h2>Трохи інформації про мене</h2>
+    <header class="header">
+      <div class="wrapper">
+        <a href="#" class="logo">LOGO</a>
+        <ul class="navigation">
+          <li><a href="#about" class="navigation__link">Про мене</a></li>
+          <li><a href="#portfolio" class="navigation__link">Портфоліо</a></li>
+          <li><a href="#contacts" class="navigation__link">Контакти</a></li>
+        </ul>
+      </div>
+    </header>
 
-    <p style="width: 50%">
-      Мені 19 років і я навчаюсь на третьому курсі графічного дизайну в ЛНАМ.
-      Люблю креатив і створювати щось нове. Також я займаюсь веб-дизайном і мені
-      це подобавється. Я відчуваю, що роблю щось важливе, що кожен веб продукт
-      допомагає тисячам людей отримати безболісно послуги на веб-сервісах або
-      вільно користуватись ними. Також я люблю котиків і перегляд серіалів на
-      Netflix:)
-    </p>
+    <section id="about" class="section">
+      <div class="wrapper">
+        <h2 class="section__title">Про мене</h2>
+        <div class="section-content">
+          <div class="section-content__wrapper">
+            <p>
+              Мені 19 років і я навчаюсь на третьому курсі графічного дизайну в
+              ЛНАМ. Люблю креатив і створювати щось нове. Також я займаюсь
+              веб-дизайном і мені це подобавється. Я відчуваю, що роблю щось
+              важливе, що кожен веб продукт допомагає тисячам людей отримати
+              безболісно послуги на веб-сервісах або вільно користуватись ними.
+              Також я люблю котиків і перегляд серіалів на Netflix:)
+            </p>
+            <h3 class="section__subtitle">Мої скіли</h3>
+            <ul>
+              <li>Створення дизайну в Figma або AdobeXD</li>
+              <li>User Flow, User Journey Map</li>
+              <li>Створення прототипів</li>
+              <li>Адаптивний дизайн</li>
+              <li>
+                Підготовка макета до поадальшого етапу розробки, створення UI
+                kit
+              </li>
+              <li>Анімація макетів в Figma, Principle</li>
+              <li>Відмальовування іконок, ілюстрацій на сайт</li>
+              <li>Вільне володіння Adobe Photoshop, Adobe Illustrator</li>
+            </ul>
+          </div>
 
-    <h2>Мої скіли:</h2>
-    <ul>
-      <li>Створення дизайну в Figma або AdobeXD</li>
-      <li>User Flow, User Journey Map</li>
-      <li>Створення прототипів</li>
-      <li>Адаптивний дизайн</li>
-      <li>Анімація макетів в Figma, Principle</li>
-      <li>Відмальовування іконок, ілюстрацій на сайт</li>
-      <li>Вільне володіння Adobe Photoshop, Adobe Illustrator</li>
-    </ul>
+          <div class="img-wrapper">
+            <img src="2020-03-24 16.40.57.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <h2>Мої контакти:</h2>
-    <ol>
-      <li>
-        <a href="https://www.behance.net/valya_belinskaya" target="_blank">
-          Behance</a
-        >
-      </li>
-      <li>
-        <a href="https://www.instagram.com/v.design.ui/" target="_blank">
-          Instagram</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.linkedin.com/in/valya-belinskaya-262708202/"
-          target="_blank"
-        >
-          LinkedIn</a
-        >
-      </li>
-      <li>
-        <a href="https://dribbble.com/Belinskayaa" target="_blank"> Dribbble</a>
-      </li>
-    </ol>
+    <section id="portfolio" class="section">
+      <div class="wrapper">
+        <h2 class="section__title">Портфоліо</h2>
+        <p>
+          Часто в дизайнерів не вистачає часу на оформлення такого чудового
+          інструменту, як портфоліо і я не виключення:) Нижче прикріпляю пару
+          моїх робіт з посиланнями
+        </p>
+        <a href="#top" class="section__link">На початок</a>
 
-    <img src="mi_photo.jpg" width="50%" />
+        <ul class="portfolio-list">
+          <li>
+            <a
+              href="https://www.behance.net/gallery/114930099/E-commerce-women-lingerie"
+              target="_blank"
+              ><img src="Обложка_11.jpg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://tsymba.ru" target="_blank"
+              ><img src="oblozhka_.jpg" alt=""
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="contacts" class="section">
+      <div class="wrapper">
+        <h2 class="section__title">Контакти</h2>
+        <p>
+          Я буду рада обговорити з вами ваш проект, для цього прикріпляю
+          посилання на всі свої соц.мережі. До зустрічі:)
+        </p>
+        <ol>
+          <li>
+            <a href="https://www.behance.net/valya_belinskaya" target="_blank"
+              >Behance</a
+            >
+          </li>
+          <li>
+            <a href="https://www.instagram.com/v.design.ui/" target="_blank"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/valya-belinskaya-262708202/"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a href="https://dribbble.com/Belinskayaa" target="_blank"
+              >Dribbble</a
+            >
+          </li>
+        </ol>
+        <a href="#top" class="section__link">На початок</a>
+      </div>
+    </section>
   </body>
 </html>
