--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <a
             href="https://images.unsplash.com/photo-1631700999566-768cbbcf4671?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
             class="portfolio-grid__item"
-            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
+            data-sub-html="<h4>Fading Light</h4><p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>"
           >
             <img
               src="https://images.unsplash.com/photo-1631700999566-768cbbcf4671?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
@@ -92,7 +92,7 @@
           <a
             href="https://images.unsplash.com/photo-1633980004717-3475100314bf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1332&q=80"
             class="portfolio-grid__item"
-            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
+            data-sub-html="<h4>Rejects</h4><p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>"
           >
             <img
               src="https://images.unsplash.com/photo-1633980004717-3475100314bf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"
@@ -102,7 +102,7 @@
           <a
             href="https://images.unsplash.com/photo-1634461658840-50f599f76e6a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80"
             class="portfolio-grid__item"
-            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
+            data-sub-html="<h4>Explorer of the truth</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
           >
             <img
               src="https://images.unsplash.com/photo-1634461658840-50f599f76e6a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80"
@@ -112,7 +112,7 @@
           <a
             href="https://images.unsplash.com/photo-1637018445500-38596a0e6473?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1333&q=80"
             class="portfolio-grid__item"
-            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
+            data-sub-html="<h4>Nor again</h4><p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself.</p>"
           >
             <img
               src="https://images.unsplash.com/photo-1637018445500-38596a0e6473?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1333&q=80"
@@ -125,7 +125,7 @@
           <a
             href="https://images.unsplash.com/photo-1635369943106-b4c27ec7004c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=689&q=80"
             class="portfolio-grid__item"
-            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
+            data-sub-html="<h4>Pleasure itself</h4><p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it.</p>"
           >
             <img
               src="https://images.unsplash.com/photo-1635369943106-b4c27ec7004c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=689&q=80"
@@ -135,7 +135,7 @@
           <a
             href="https://images.unsplash.com/photo-1635706751517-3858bc90bddf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
             class="portfolio-grid__item"
-            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>"
+            data-sub-html="<h4>On the other hand</h4><p> But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure.</p>"
           >
             <img
               src="https://images.unsplash.com/photo-1635706751517-3858bc90bddf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
